# test-task

./: CMakeLists.txt
data/: 3.txt  4.txt
effective_mobile/: .gitignore  README.md
effective_mobile/data/: book.json
effective_mobile/library_manager/: Doxyfile  setup.py
effective_mobile/library_manager/src/: main.py
effective_mobile/src/: library.py
effective_mobile/tests/: test.py
infotecs/: README.md
infotecs/client/: CMakeLists.txt  main.cpp
infotecs/client/include/: client.hpp
infotecs/client/src/: client.cpp
infotecs/server/: CMakeLists.txt  main.cpp
infotecs/server/include/: server.hpp
infotecs/server/src/: server.cpp
petstore-api-tests/: .gitignore  README.md
petstore-api-tests/src/: api_client.py
petstore-api-tests/tests/: conftest.py  test_pet.py  test_store.py  test_user.py
src/: computer_club.cpp
top_systems/: CMakeLists.txt  README.md  shapes.cpp
yadro/: README.md  main.cpp
yadro/data/: 2.txt
yadro/include/: computer_club.hpp
